--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,7 @@
   <% @articles.each do |article| %>
     <li>
       <%= link_to article.title, article %>
+      <%= article.status %>
     </li>
   <% end %>
 </ul>
