--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,4 +11,5 @@ last updated: <%= time_ago_in_words(@article.updated_at) %> ago</small>
   <li><%= link_to "Destroy", article_path(@article),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %></li>
+  <li><%= link_to "Back", root_path %></li>
 </ul>
