--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Articles</h1>
 
+<% if current_user.member? %>
+  <%= link_to "New Article", new_article_path %>
+<% end %>
+
 <ul>
   <% @articles.each do |article| %>
     <li>
@@ -12,6 +16,4 @@
   <% end %>
 </ul>
 
-<% if current_user.member? %>
-  <%= link_to "New Article", new_article_path %>
-<% end %>
+<%= will_paginate @articles %>
