--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Articles</h1>
 
-<% if current_user.member? %>
+<% if current_user.member? || current_user.admin? %>
   <%= link_to "New Article", new_article_path %>
 <% end %>
 
@@ -9,7 +9,7 @@
     <li>
       <%= link_to article.title, article %>
 
-      <% if current_user.moderator? && article.draft? || current_user.member? && article.draft? %>
+      <% if current_user.admin? && article.draft? || current_user.moderator? && article.draft? || current_user.member? && article.draft? %>
         <font color="red"><%= article.status %></font>
       <% end %>
     </li>
