--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,26 @@
 <h1>Articles</h1>
 
+<% if current_user.admin? %>
+  <div align="center" ><%= form_tag articles_path, :method => "get" do %>
+    <%= label_tag("what do you want to find?") %><br>
+    <%= text_field_tag :title %><br>
+
+    <%= label_tag("what user of articles do you want to find?") %><br>
+    <%= text_field_tag :user %><br>
+
+    <%= label_tag("what do you want to find? in body") %><br>
+    <%= text_field_tag :body %><br>
+
+    <%= check_box_tag :status, params[:status]='draft' %>
+    <%= label_tag :status, "Draft" %><br>
+
+    <%= check_box_tag :status, params[:status]='published' %>
+    <%= label_tag :status, "Published" %><br>
+
+    <%= submit_tag("Search") %>
+  <% end %></div>
+<% end %>
+
 <% if current_user.member? || current_user.admin? %>
   <%= link_to "New Article", new_article_path %>
 <% end %>
