Fix bugs with images

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,7 +18,18 @@
   <div>
     <%= form.label :image %>
     <%= form.file_field :image %><br>
-    
+    <%= form.hidden_field :image_cache %>
+
+      <% if article.image? %>
+      <%= image_tag article.image.thumb.url %>
+      <div>
+        <%= label_tag :remove_image do %>
+          Remove image
+          <%= form.check_box :remove_image %>
+        <% end %>
+      </div>
+      <% end %>
+
     <% article.errors.full_messages_for(:image).each do |message| %>
       <div><%= message %></div>
     <% end %>
