--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
   <font color="red"><%= @article.status %></font><br>
 <% end %>
 
-<%= image_tag(@article.image.url, alt: 'Image') if @article.image? %>
+<%= image_tag(@article.image.thumb.url, alt: 'Image') if @article.image? %>
 
 <p><%= @article.body %></p><br>
 
