Add a comment correction function

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,9 +1,7 @@
-.btn {
-  text-decoration: none;
-  text-align: center;
-  outline: none;
+.hidden {
+  display: none;
 }
 
-.hidden {
+.hidden-edit {
   display: none;
 }
